tests/paczka1/fuzzy1/74459717.err
Error in line 4: Ij5ol A278 37,4
Error in line 7: Ij5ol S986 35,8
Error in line 10: BDZBwXTq A135 54,6
Error in line 13: A135 S730 43,0
Error in line 20: 38p A135 12,2
Error in line 23: n2KHqPHbC A135 57,9
Error in line 17: BDZBwXTq S986 14,5
Error in line 32: BDZBwXTq S730 83,2
Error in line 34: 8QWWA08ZFEp A135 224,30
Error in line 33: BDZBwXTq A278 81,7
